<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Money</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="send_money">Send money</string>
    <string name="request_money">Request money</string>
    <string name="accept_request">Accept request for money</string>
    <string name="manage_account">Manage my account</string>
    <string name="recharge">Recharge</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="history">Account history</string>
    <string name="manage_alias">Manage alias</string>
    <string name="invite">Invite a friend</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="number_or_alias">Mobile number or alias</string>
    <string name="amount">Amount</string>
    <string name="ok">OK</string>
    <string name="login">Log In</string>
    <string name="pin">Pin number</string>
    <string name="main_menu">Main menu</string>

    <color name="divider_background">#000000</color>

    <string name="request_number">Transaction number</string>
    <string name="invalid_input">Invalid input.</string>
    <string name="invalid_empty">All fields must be filled.</string>
    <string name="invalid_pin_length">The PIN consists of 4 digits.</string>
    <string name="welcome">Welcome! You are logged in as user %1$s.</string>
    <string name="login_unsuccessful">Login unsuccessful</string>
    <string name="not_logged_in">Please log in.</string>
    <string name="current_balance">Your current balance is %1$,.2f €.</string>
    <string name="money_sent">%1$,.2f € has been sent to user %2$s.</string>
    <string name="money_sent_new_user">%1$,.2f € and an invitation to join MobileMoney has been sent to phone number %2$s. The user needs to sign up to receive the money.</string>
    <string name="money_requested">%1$,.2f € has been requested from user %2$s.</string>
    <string name="money_received">%1$,.2f € has been received from user %2$s.</string>
    <string name="title_activity_account_history">AccountHistory</string>
    <string name="title_activity_manage_account">ManageAccount</string>
    <string name="title_activity_recharge">Recharge</string>
    <string name="asking_amount">Amount of the recharge?</string>
    <string name="money_recharged">Your mobile account has been recharged by %1$,.2f €.</string>
    <string name="money_withdrawed">You have withdrawed %1$,.2f € from your mobile account.</string>
    <string name="title_activity_withdrawal">Withdrawal</string>
    <string name="title_activity_manage_alias">ManageAlias</string>
    <string name="alias">Alias:</string>
    <string name="enter_alias">Enter your desired alias</string>
    <string name="update_alias">Update alias</string>
    <string name="alias_changed">You\'ve successfully changed your alias to: </string>
    <string name="money_requested_sms">Hey, could you lend me %1$,.2f € ? If you can, just enter %2$d as the transaction number in "Accept Request" inside the Mobile Money app. Thanks!</string>
    <string name="money_sent_sms">Hey, I just sent you %1$,.2f € in the Mobile Money app!</string>
    <string name="title_activity_help">Help</string>
    <string name="help_send_money">Fill in the mobile phone number (or registered alias) and amount and then press OK.</string>
    <string name="help_request_money">Fill in the mobile phone number (or registered alias) and amount and then press OK.</string>
    <string name="help_accept_request">Fill in the transaction number you received through SMS and then press OK.</string>
    <string name="help_manage_account">Choose either deposit or withdraw, then put the amount and press OK.</string>
    <string name="help_history">You will see your account history and current balance.</string>
    <string name="help_manage_alias">Either press OK to delete your current alias or fill in your new alias and press OK.</string>
    <string name="help_invite">Fill in a mobile phone number and press OK.</string>
    <string name="help_log_out">Your session will have ended and you will be at the login screen.</string>
    <string name="thanks">Thanks for using Mobile Money!</string>
    <string name="title_activity_invite_friend">InviteFriend</string>
    <string name="invite_friend">Invite Friend</string>
<string name="friends_phonenumber">Friends phonenumber</string>
</resources>