<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageAccount" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/manage_account"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/current_balance"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/current_balance" />
    
    <Button
        android:id="@+id/recharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="0dp"
        android:text="@string/recharge"
        android:layout_below="@+id/current_balance"
        android:onClick="onClick" />

    <Button
        android:id="@+id/withdrawal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recharge"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="0dp"
        android:text="@string/withdrawal"
        android:onClick="onClick" />
    
    <RelativeLayout
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:layout_below="@+id/withdrawal"
        android:layout_alignParentBottom="true" >
    	<include
        	android:id="@+id/footer"
        	layout="@layout/footer" />
    </RelativeLayout>

</RelativeLayout>