<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/body"
    android:background="@drawable/backgroundnew3" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/accept_request"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/request_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginTop="22dp"
        android:hint="@string/request_number"
        android:inputType="number"
        android:ems="10"
        android:maxLength="18" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_number"
        android:layout_margin="20dp"
        android:text="@string/ok"
        android:onClick="acceptRequest"
        android:ems="10" />
    
    <RelativeLayout
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:layout_below="@+id/ok"
        android:layout_alignParentBottom="true" >
    	<include
        	android:id="@+id/footer"
        	layout="@layout/footer" />
    </RelativeLayout>
    
</RelativeLayout>